force-app/main/default/objects/Universal_App__mdt/fields/Include_Signature__c.field-meta.xml
<CustomField>
    <fullName>Include_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Signature</label>
    <type>Checkbox</type>
</CustomField>