force-app/main/default/objects/Universal_App__mdt/fields/isSaveForLater__c.field-meta.xml
<CustomField>
    <fullName>isSaveForLater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Save For Later</label>
    <type>Checkbox</type>
</CustomField>