force-app/main/default/objects/Universal_App__mdt/fields/vfPageRedirect__c.field-meta.xml
<CustomField>
    <fullName>vfPageRedirect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines the type of page to direct to. If checked redirect options will redirect to a given VisualForce Page otherwise redirect options will redirect to a given Digital Experience (Community) Page.</inlineHelpText>
    <label>VF Page Redirect</label>
    <type>Checkbox</type>
</CustomField>